@@ -1,5 +1,11 @@
 * SVN *
 
+* Allow search page to take ?s parameter to specify section path.  
+
+  * nil (default)     - all sections
+  * '' (empty string) - home section
+  * 'foo/bar'         - given section
+
 * Initial Plugin Whammy Jammy [Nick Faiz, Rick Olson]
 
 * link_to_section adds class='selected' for the current section [Tammo Freese]
